--- a/.github/workflows/manual-update-durations.yml
+++ b/.github/workflows/manual-update-durations.yml
@@ -23,7 +23,7 @@ env:
   SSH_USER: ttuser
   # Artifact download mode: 'specific' to use ARTIFACT_RUN_ID, 'latest' to use latest push-main
   ARTIFACT_MODE: specific
-  ARTIFACT_RUN_ID: 21839981996
+  ARTIFACT_RUN_ID: 22102864988
 
 jobs:
   multihost-test:
@@ -110,9 +110,16 @@ jobs:
 
           # Install the wheel
           echo 'Not installing wheel for now.'
-          # WHEEL_PATH=\$(find \$ARTIFACT_DIR -name '*.whl' | head -n 1)
-          # echo 'Installing wheel:' \$WHEEL_PATH
-          # pip install \"\$WHEEL_PATH\"
+          WHEEL_PATH=\$(find \$ARTIFACT_DIR -name '*.whl' | head -n 1)
+          echo 'Installing wheel:' \$WHEEL_PATH
+          pip install \"\$WHEEL_PATH\"
+
+          # temporarily relocate scale_out (oops)
+          echo 'Temporarily relocating scale_out to outer directory'
+          cd /workspace/venv/lib/python3.11/site-packages/pjrt_plugin_tt/tt-metal/tests/scale_out
+          mv scale_out/* .
+          rm -rf scale_out
+          ls
           "
 
       # - name: Reset hardware and run liveness check
