--- a/.github/workflows/manual-update-durations.yml
+++ b/.github/workflows/manual-update-durations.yml
@@ -122,33 +122,33 @@ jobs:
           ls
           "
 
-      # - name: Reset hardware and run liveness check
-      #   shell: bash
-      #   run: |
-      #     source venv/activate
+      - name: Reset hardware and run liveness check
+        shell: bash
+        run: |
+          source venv/activate
 
-      #     # Install tt-smi
-      #     pip install tt-smi
+          # Install tt-smi
+          pip install tt-smi
 
-      #     # Reset and test in a loop - retry if liveness check fails
-      #     MAX_ATTEMPTS=5
-      #     for i in $(seq 1 $MAX_ATTEMPTS); do
-      #       echo "Attempt $i/$MAX_ATTEMPTS: Resetting hardware..."
-      #       tt-smi -r
-      #       sleep 1
+          # Reset and test in a loop - retry if liveness check fails
+          MAX_ATTEMPTS=5
+          for i in $(seq 1 $MAX_ATTEMPTS); do
+            echo "Attempt $i/$MAX_ATTEMPTS: Resetting hardware..."
+            tt-smi -r
+            sleep 1
 
-      #       echo "Running liveness check (MNIST example)..."
-      #       if python3 examples/pytorch/mnist.py; then
-      #         echo "Liveness check passed!"
-      #         break
-      #       else
-      #         echo "Liveness check failed, will retry..."
-      #         if [ $i -eq $MAX_ATTEMPTS ]; then
-      #           echo "Failed after $MAX_ATTEMPTS attempts"
-      #           exit 1
-      #         fi
-      #       fi
-      #     done
+            echo "Running liveness check (MNIST example)..."
+            if python3 examples/pytorch/mnist.py; then
+              echo "Liveness check passed!"
+              break
+            else
+              echo "Liveness check failed, will retry..."
+              if [ $i -eq $MAX_ATTEMPTS ]; then
+                echo "Failed after $MAX_ATTEMPTS attempts"
+                exit 1
+              fi
+            fi
+          done
 
       - name: Worker Pause
         if: matrix.hostname != env.CONTROLLER_HOST
@@ -227,10 +227,28 @@ jobs:
           echo 'Running tests across all hosts...'
           source venv/activate
 
-          echo 'Sleeping for 6000 seconds'
-          sleep 6000
+          # Make remote_docker.sh executable
+          chmod +x /workspace/remote_docker.sh
 
-          TTXLA_LOGGER_LEVEL=DEBUG pytest -svv tests/torch/multi_host/experimental/test_multihost_basic.py -k \"dual_bh_quietbox\"
+          # echo 'Sleeping for 6000 seconds'
+          # sleep 6000
+
+          export TTXLA_LOGGER_LEVEL=DEBUG
+          export TT_DISTRIBUTED_WORKER_PATH=/workspace/venv/lib/python3.11/site-packages/pjrt_plugin_tt/bin/ttmlir/runtime/distributed/worker
+          export TT_RUNTIME_ENABLE_DISTRIBUTED=1
+          export TT_DISTRIBUTED_RANK_BINDING=dual_bh_quietbox
+          export TT_DISTRIBUTED_CONTROLLER_HOST_NAME=forge-qbae-01
+          export TT_DISTRIBUTED_BTL_TCP_IF_INCLUDE=enp10s0f1np1
+          export TT_DISTRIBUTED_HOSTS_LIST=forge-qbae-01,forge-qbae-02
+          export TT_DISTRIBUTED_PLM_RSH_AGENT=/workspace/remote_docker.sh
+
+          pytest -svv tests/torch/graphs/test_tensor_persistence.py::test_simple_sharded_addition
+
+
+          # TTXLA_LOGGER_LEVEL=DEBUG pytest -svv tests/torch/multi_host/experimental/test_multihost_basic.py -k \"dual_bh_quietbox\"
+
+
+          sleep 6000
           "
 
       - name: Cleanup
