--- a/.github/workflows/manual-update-durations.yml
+++ b/.github/workflows/manual-update-durations.yml
@@ -131,6 +131,13 @@ jobs:
           # Install tt-smi
           pip install tt-smi
 
+          # Try running MNIST first without reset
+          echo 'Attempting liveness check without reset first...'
+          if python3 examples/pytorch/mnist.py; then
+            echo 'Liveness check passed without reset!'
+            exit 0
+          fi
+
           # Reset and test in a loop - retry if liveness check fails
           MAX_ATTEMPTS=5
           for i in \$(seq 1 \$MAX_ATTEMPTS); do
@@ -230,7 +237,7 @@ jobs:
           source venv/activate
 
           # Make remote_docker.sh executable
-          chmod +x /workspace/remote_docker.sh
+          chmod +x tests/torch/multi_host/experimental/remote_docker.sh
 
           # echo 'Sleeping for 6000 seconds'
           # sleep 6000
@@ -242,10 +249,9 @@ jobs:
           export TT_DISTRIBUTED_CONTROLLER_HOST_NAME=forge-qbae-01
           export TT_DISTRIBUTED_BTL_TCP_IF_INCLUDE=enp10s0f1np1
           export TT_DISTRIBUTED_HOSTS_LIST=forge-qbae-01,forge-qbae-02
-          export TT_DISTRIBUTED_PLM_RSH_AGENT=/workspace/remote_docker.sh
+          export TT_DISTRIBUTED_PLM_RSH_AGENT=tests/torch/multi_host/experimental/remote_docker.sh
 
           pytest -svv tests/torch/graphs/test_tensor_persistence.py::test_simple_sharded_addition
-
 
           # TTXLA_LOGGER_LEVEL=DEBUG pytest -svv tests/torch/multi_host/experimental/test_multihost_basic.py -k \"dual_bh_quietbox\"
 
