--- a/.github/workflows/manual-update-durations.yml
+++ b/.github/workflows/manual-update-durations.yml
@@ -122,6 +122,12 @@ jobs:
           ls
           "
 
+      - name: Make remote_docker.sh executable
+        run: |
+          docker exec ubuntu-host-mapped bash -c "
+          chmod +x /workspace/tests/torch/multi_host/experimental/remote_docker.sh
+          "
+
       - name: Reset hardware and run liveness check
         shell: bash
         run: |
@@ -236,9 +242,6 @@ jobs:
           echo 'Running tests across all hosts...'
           source venv/activate
 
-          # Make remote_docker.sh executable
-          chmod +x tests/torch/multi_host/experimental/remote_docker.sh
-
           # echo 'Sleeping for 6000 seconds'
           # sleep 6000
 
@@ -249,7 +252,7 @@ jobs:
           export TT_DISTRIBUTED_CONTROLLER_HOST_NAME=forge-qbae-01
           export TT_DISTRIBUTED_BTL_TCP_IF_INCLUDE=enp10s0f1np1
           export TT_DISTRIBUTED_HOSTS_LIST=forge-qbae-01,forge-qbae-02
-          export TT_DISTRIBUTED_PLM_RSH_AGENT=tests/torch/multi_host/experimental/remote_docker.sh
+          export TT_DISTRIBUTED_PLM_RSH_AGENT=/workspace/tests/torch/multi_host/experimental/remote_docker.sh
 
           pytest -svv tests/torch/graphs/test_tensor_persistence.py::test_simple_sharded_addition
 
