--- a/.github/workflows/call-release-tmp.yml
+++ b/.github/workflows/call-release-tmp.yml
@@ -2,6 +2,10 @@ name: TT-xla release (call)
 
 on:
   workflow_call:
+    outputs:
+      release_ready:
+        description: 'Did wheel push, docker build and release publish steps succeed'
+        value: ${{ jobs.summary.outputs.release_ready }}
 
 jobs:
   publish-release-wheel:
@@ -31,6 +35,16 @@ jobs:
   summary:
     needs: [ publish-release-wheel, build-release-docker, publish-release ]
     runs-on: ubuntu-latest
+    outputs:
+      release_ready: ${{ steps.flag.outputs.ready }}
     steps:
+      - id: flag
+        run: |
+          ready="false"
+          if [[ ${{ needs.publish-release-wheel.result == 'success' && needs.build-release-docker.result == 'success' && needs.publish-release.result == 'success' }} ]]; then
+            ready="true"
+          fi
+          echo "ready=$ready" >> $GITHUB_OUTPUT
+
       - id: Log
         run: echo "I'm here"
