--- a/.github/workflows/call-release.yml
+++ b/.github/workflows/call-release.yml
@@ -73,6 +73,7 @@ jobs:
 
   summary:
     needs: [ publish-release-wheel, build-release-docker, publish-release ]
+    if: always()
     runs-on: ubuntu-latest
     outputs:
       release_ready: ${{ steps.flag.outputs.ready }}
@@ -80,7 +81,7 @@ jobs:
       - id: flag
         run: |
           ready="false"
-          if [[ ${{ needs.publish-release-wheel.result == 'success' && needs.build-release-docker.result == 'success' && needs.publish-release.result == 'success' }} ]]; then
+          if [[ "${{ needs.publish-release-wheel.result == 'success' && needs.build-release-docker.result == 'success' && needs.publish-release.result == 'success' }}" == "true" ]]; then
             ready="true"
           fi
           echo "ready=$ready" >> $GITHUB_OUTPUT
