Add a separate test config validator (#3233)
Currently, our validation of test configs is tied to the `pytest
test_all_models` call, which means that we have to run it in our docker,
with the python dependecies loaded from tt-xla environment. However, we
sometimes want to run this validation on difference check in the onPR,
which is ran on just a bare machine, without docker (see PR
https://github.com/tenstorrent/tt-xla/pull/3179). To enable this, I
added a couple of changes. I extracted test config validation into a
standalone `validate_test_config.py` script that no longer requires
importing torch, jax, or transformers. The new script uses AST parsing
to discover model variants and cross-checks them against YAML config
entries. The validation step in the CI workflow is simplified to just
`pip install pyyaml` and run the script directly, removing the need to
activate the full venv and invoke pytest. The existing validation logic
and related CLI options (--validate-test-config) have been removed from
`conftest.py` to keep it focused on test collection and markers.

You can view the run in the `validate-test-config` debug job here:
https://github.com/tenstorrent/tt-xla/actions/runs/21830404076/job/62990292083

--- a/.github/workflows/call-test.yml
+++ b/.github/workflows/call-test.yml
@@ -43,6 +43,18 @@ env:
   TT_XLA_CI: 1
 
 jobs:
+  validate-test-config:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - run: pip install pyyaml
+      - run: python3 tests/runner/validate_test_config.py
+
   generate-matrix-test:
     uses: ./.github/workflows/call-generate-matrix.yml
     secrets: inherit
@@ -286,10 +298,8 @@ jobs:
       if: ${{ steps.strings.outputs.forge-models-test == 'true' && strategy.job-index == 0 }}
       shell: bash
       run: |
-        source venv/activate
-        python -m pytest -vv ./tests/runner/test_models.py::test_all_models_torch --validate-test-config
-        python -m pytest -vv ./tests/runner/test_models.py::test_all_models_jax --validate-test-config
-        python -m pytest -vv ./tests/runner/test_models.py::test_llms_torch --validate-test-config
+        pip install pyyaml
+        python3 tests/runner/validate_test_config.py
 
     - name: Collect Tests
       id: collect-tests
