--- a/.github/actions/inspect-changes/action.yml
+++ b/.github/actions/inspect-changes/action.yml
@@ -92,14 +92,15 @@ runs:
           # Just run forge tests if everything else is skipped but we detect changes under tests/runner/.
           if [[ "$skip_build_and_test" == "true" ]]; then
             push_changed=false
+            yml_changed=false
             pip install pyyaml pytest jsonschema
+            git fetch origin "${{ github.event.pull_request.base.sha }}"
             for file in $CHANGED_FILES; do
-              if [[ $file == tests/runner/**/*.yml ]] || [[ $file == tests/runner/**/*.yaml ]]; then
+              if [[ $file =~ ^tests/runner/.+\.(yml|yaml)$ ]]; then
                 echo "Config file $file changed"
-                python tests/runner/test_config/validate_with_schema.py "$file" tests/runner/test_config/test_config_schema.json
+                yml_changed=true
                 # Get the original file content before PR changes
                 rm -f .original_file.yml
-                git fetch origin "${{ github.event.pull_request.base.sha }}"
                 git show "${{ github.event.pull_request.base.sha }}:$file" >.original_file.yml
                 res=$(python tests/runner/test_config/model_diff.py "$file" .original_file.yml)
                 if [ -z "$res" ] || [ "$res" -eq 1 ]; then
@@ -110,9 +111,12 @@ runs:
               fi
             done
             if [[ $push_changed == true ]]; then
-              echo "Other changes under tests/runner/ detected. Will run full tests instead of just forge models."
-              only_run_forge_models=false
+              echo "Other changes under tests/runner/ detected. Will run push tests."
+              only_run_forge_models=true
               skip_build_and_test=false
+            elif [[ $yml_changed == true ]]; then
+              echo "Only yml config changes under tests/runner/. Validating changed config files against schema."
+              python tests/runner/validate_test_config.py
             fi
           fi
 
