--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -2286,12 +2286,12 @@ test_config:
     status: EXPECTED_PASSING
 
   sentencizer/pytorch-Xlm_Roberta_Base-single_device-inference:
-    status: KNOWN_FAILURE_XFAIL
-    reason: "error: 'stablehlo.reshape' op requires compatible element types for all operands and results  - https://github.com/tenstorrent/tt-xla/issues/1750"
+    assert_pcc: false
+    status: EXPECTED_PASSING
 
   sentencizer/pytorch-Xlm_Roberta_Large-single_device-inference:
-    status: KNOWN_FAILURE_XFAIL
-    reason: "error: 'stablehlo.reshape' op requires compatible element types for all operands and results  - https://github.com/tenstorrent/tt-xla/issues/1750"
+    assert_pcc: false
+    status: EXPECTED_PASSING
 
   stable_diffusion/pytorch-3.5_Medium-single_device-inference:
     status: EXCLUDE_MODEL  # stable_diffusion variants have a hand written test, don't run via test_models.py. TODO(@ppadjinTT): when pipeline becomes supported through test infra, enable this model again.
